# Language-Learning

./: pyproject.toml
data/: Mandarin_3000_final.csv  Sentences__Hanzi.txt  buffer_words.csv  mandarin_3000.csv  mandarin_radicals.csv  minimal_pairs.csv  sentences_hanzi.csv  sentences_sound.csv  to_anki.csv  tones.csv
src/: langauge_play.ipynb  language.ipynb  language_browser.py  minimal_pairs.py  sentence_miner.py
