[tool.poetry]
name = "language-learning"
version = "0.1.0"
description = ""
authors = ["gaulgeous <gauldavid78259@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
regex = "^2023.12.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
